# lisensor

./: .gitignore  Cargo.toml  Lisensor.toml  README.md  Taskfile.yml
.github/workflows/: build.yml  release.yml
src/: cli.rs  config.rs  format.rs  lib.rs  main.rs  runner.rs
tests/: fixture_test.rs
tests/fixtures/: .gitignore  after_copyright.txt  before_license.txt  before_license.txt_fixed  empty_text.txt_fixed  first_not_sentinel.txt  first_not_sentinel.txt_cfail  first_not_sentinel.txt_fixed  middle_license.txt  middle_license.txt_cfail  multi_correct.txt  multi_correct.txt_fixed  multi_wrong.txt  multi_wrong.txt_ffail  multi_wrong.txt_fixed  only_1line.txt  only_1line.txt_fixed  sentinel_first.txt  sentinel_first.txt_fixed  wrong_holder.txt  wrong_holder.txt_cfail  wrong_holder.txt_fixed  wrong_holder_license.txt  wrong_holder_license.txt_fixed  wrong_license.txt  wrong_license.txt_cfail  wrong_license.txt_fixed  wrong_year.txt  wrong_year.txt_cfail  wrong_year.txt_fixed  wrong_year_future.txt  wrong_year_future.txt_cfail  wrong_year_future.txt_ffail  wrong_year_future_range.txt_cfail  wrong_year_future_range.txt_ffail  wrong_year_future_range.txt_fixed  wrong_year_range.txt  wrong_year_range.txt_cfail  wrong_year_range.txt_fixed
